Remove illegal access warnings in tests