@@ -91,6 +91,18 @@ integrationTest.mustRunAfter test
 test {
     useJUnitPlatform()
     ignoreFailures = Boolean.getBoolean("test.ignoreFailures") 
+    
+    jvmArgs = [
+    //"-Dlog4j2.debug=true",
+    
+    // Add the JAVA 9 specific start-up parameters required by Tomcat
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.io=ALL-UNNAMED",
+    "--add-opens=java.base/java.util=ALL-UNNAMED",
+    "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+    "--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED"
+    ]
+    
 }
 
 integrationTest {
@@ -102,6 +114,17 @@ integrationTest {
     // debug log4j configuration
     //systemProperty("log4j2.debug", "true")
     forkEvery = 1
+    
+        jvmArgs = [
+    //"-Dlog4j2.debug=true",
+    
+    // Add the JAVA 9 specific start-up parameters required by Tomcat
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.io=ALL-UNNAMED",
+    "--add-opens=java.base/java.util=ALL-UNNAMED",
+    "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+    "--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED"
+    ]    
 }
 
 repositories {
